--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "devDependencies": {
     "eslint": "^9.35.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "express-ws": "^5.0.2"
   }
 }
